<resources>
    <string name="app_name">Public Diary</string>
    <string name="backwardmonth"><![CDATA[<=-]]></string>
    <string name="forwardmonth"><![CDATA[-=>]]></string>
    <string name="feb_2022">Feb 2022</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thr">THR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="new_event">+</string>
    <string name="entry_title">Entry Title</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="save">Save</string>
    <string name="publish">Publish</string>
    <string name="backDay"><![CDATA[<=-]]></string>
    <string name="forwardDay"><![CDATA[-=>]]></string>
    <string name="Day">Monday</string>
    <string name="monthYear">Feb 2021</string>
    <string name="explore">Explore</string>
    <string name="hourtv">HourTV</string>
    <string name="title_activity_login">Please Login In</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="start_typing">Start Typing… \n\n To censor on PUBLISH: \n Use \n ~maleName~ for male names, \n ~femaleName~ for female names, \n ~nonbinaryName~ for other names (ex. places, schools, nonbinary people) \n followed by *(name) and every time you use it in your entry, put an asterisk before and a space after every usage of the name. \n\n ex. \n \'Hello, ~nonbinaryName~ *Teja Teja *Teja *Teja ,\' \n\n Will publish \n \'Hello, Jaxet Teja Jaxet Jaxet ,\'</string>
    <string name="start_typing_alpha">Start Typing...</string>
    <string name="exclamationmark">!</string>
</resources>